<resources>
  <string name="app_name">Earthquake app</string>
  <string name="magnitude">Magnitude:\u0020</string>
  <string name="magnitude_type">Magnitude type:\u0020</string>
  <string name="significance">Significance:\u0020</string>
  <string name="alert">Alert:\u0020</string>

  <string name="action_map">Map</string>
  <string name="action_details">Details</string>
  <string name="action_list">Earthquakes</string>

  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCmaEgsZtqiF6qFpYHfMYwvvnL2s9VLH4Q</string>
  <string name="closest_to_you">Closest to you</string>
  <string name="distance">Distance:\u0020</string>
  <string name="kilometers">\u0020km</string>
  <string name="properties">properties</string>
  <string name="date">Date:\u0020</string>
  <string name="no_internet_connection">No internet connection!</string>
  <string name="nullAlert">none</string>
</resources>
