<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:foreground="?android:selectableItemBackground"
  android:minHeight="128dp"
  app:cardCornerRadius="8dp">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
      android:id="@+id/text_view_place"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Place"/>

    <TextView
      android:id="@+id/magnitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/magnitude"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_place"
      />

    <TextView
      android:id="@+id/text_view_magnitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@+id/magnitude"
      app:layout_constraintTop_toTopOf="@+id/magnitude"
      tools:text="mag"/>

    <TextView
      android:id="@+id/text_view_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_place"
      tools:text="date"/>

    <TextView
      android:id="@+id/magType"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/magnitude_type"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/magnitude"/>

    <TextView
      android:id="@+id/text_view_magType"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@+id/magType"
      app:layout_constraintTop_toTopOf="@+id/magType"
      tools:text="mag_type"/>

    <TextView
      android:id="@+id/significance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/significance"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/magType"/>

    <TextView
      android:id="@+id/text_view_significance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@+id/significance"
      app:layout_constraintTop_toTopOf="@+id/significance"
      tools:text="sig"/>

    <TextView
      android:id="@+id/alert"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alert"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/significance"/>

    <TextView
      android:id="@+id/text_view_alert"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toEndOf="@+id/alert"
      app:layout_constraintTop_toTopOf="@+id/alert"
      tools:text="alert"/>

  </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>